--- a/style.css
+++ b/style.css
@@ -4,12 +4,32 @@
     box-sizing: border-box;
 }
 
-ul li {
+html {
+    font-family: 'Roboto', sans-serif;
+}
+
+ul {
+    padding-left: 40px;
+}
+
+p {
+    padding: 30px 0;
+}
+
+.header_links {
+    padding: 0;
+}
+
+.header_links li {
     list-style: none;
 }
 
 header {
     border-bottom: 1px solid grey;
+}
+
+ol {
+    padding-left: 18px;
 }
 
 .container_qna {
